feat: implement proof and epoch endpoint
